--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@astrojs/check": "^0.9.3",
     "@astrojs/tailwind": "^5.1.1",
     "astro": "^4.15.11",
+    "daisyui": "^4.12.12",
     "flowbite": "^2.5.2",
     "tailwindcss": "^3.4.13"
   }
