--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@astrojs/check": "^0.9.3",
     "@astrojs/react": "^3.6.2",
     "@astrojs/tailwind": "^5.1.1",
+    "@number-flow/react": "^0.2.5",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
     "astro": "^4.15.11",
     "daisyui": "^4.12.12",
     "flowbite": "^2.5.2",
+    "framer-motion": "^11.11.10",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "tailwindcss": "^3.4.13"
