--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "flowbite": "^2.5.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-loader-spinner": "^6.1.6",
     "tailwindcss": "^3.4.13"
   }
 }
