fix: Se solucionan errores

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "tailwindcss": "^3.4.13"
   },
   "devDependencies": {
+    "@astrojs/ts-plugin": "^1.10.4",
     "prettier": "^3.3.3",
     "prettier-plugin-astro": "^0.14.1"
   }
