--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@astrojs/node": "^8.3.4",
     "@astrojs/react": "^3.6.3",
     "@astrojs/tailwind": "^5.1.5",
+    "@swup/astro": "^1.5.0",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
@@ -24,6 +25,7 @@
     "flowbite": "^2.5.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "swup": "^4.8.1",
     "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
