--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "astro": "^4.16.18",
+    "astro-compress": "^2.3.6",
     "daisyui": "^4.12.23",
     "flowbite": "^2.5.2",
     "react": "^18.3.1",
