--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
+    "animate.css": "^4.1.1",
     "astro": "^4.16.18",
     "astro-compress": "^2.3.6",
     "daisyui": "^4.12.23",
