--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "flowbite": "^2.5.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "swiper": "^11.2.4",
     "swup": "^4.8.1",
     "tailwindcss": "^3.4.17"
   },
