--- a/package.json
+++ b/package.json
@@ -19,14 +19,14 @@
     "@swup/astro": "^1.5.0",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/react": "^18.3.18",
-    "@types/react-dom": "^18.3.5",
+    "@types/react-dom": "^19.0.4",
     "animate.css": "^4.1.1",
     "astro": "^4.16.18",
     "astro-compress": "^2.3.6",
     "daisyui": "^4.12.23",
     "flowbite": "^2.5.2",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react-dom": "18.3.1",
     "swiper": "^11.2.4",
     "swup": "^4.8.1",
     "tailwindcss": "^3.4.17"
