--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
-    "@astrojs/node": "^8.3.4",
     "@astrojs/react": "^3.6.3",
     "@astrojs/tailwind": "^5.1.5",
+    "@astrojs/vercel": "8.0.7",
     "@swup/astro": "^1.5.0",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/react": "^18.3.18",
@@ -33,7 +33,7 @@
   },
   "devDependencies": {
     "@astrojs/ts-plugin": "^1.10.4",
-    "prettier": "^3.5.0",
+    "prettier": "^3.5.1",
     "prettier-plugin-astro": "^0.14.1"
   }
 }
