--- a/package.json
+++ b/package.json
@@ -15,13 +15,12 @@
     "@astrojs/check": "^0.9.4",
     "@astrojs/react": "^3.6.3",
     "@astrojs/tailwind": "^5.1.5",
-    "@astrojs/vercel": "8.0.7",
     "@swup/astro": "^1.5.0",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^19.0.4",
     "animate.css": "^4.1.1",
-    "astro": "^4.16.18",
+    "astro": "4.0.7",
     "astro-compress": "^2.3.6",
     "daisyui": "^4.12.23",
     "flowbite": "^2.5.2",
