--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "astro-compress": "^2.3.6",
     "daisyui": "^4.12.23",
     "flowbite": "^2.5.2",
+    "framer-motion": "^12.4.10",
+    "lucide-react": "^0.477.0",
     "react": "^18.3.1",
     "react-dom": "18.3.1",
     "swiper": "^11.2.4",
