--- a/package.json
+++ b/package.json
@@ -14,15 +14,15 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
-    "@astrojs/react": "^3.6.3",
+    "@astrojs/react": "3.6.3",
     "@astrojs/sitemap": "^3.2.1",
-    "@astrojs/tailwind": "^5.1.5",
+    "@astrojs/tailwind": "5.1.5",
     "@swup/astro": "^1.5.0",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^19.0.4",
     "animate.css": "^4.1.1",
-    "astro": "4.0.7",
+    "astro": "5.4.2",
     "astro-compress": "^2.3.6",
     "daisyui": "4.12.23",
     "flowbite": "^2.5.2",
@@ -32,12 +32,12 @@
     "react": "^18.3.1",
     "react-dom": "18.3.1",
     "swiper": "^11.2.4",
-    "swup": "^4.8.1",
-    "tailwindcss": "^3.4.17"
+    "swup": "^4.8.1"
   },
   "devDependencies": {
     "@astrojs/ts-plugin": "^1.10.4",
     "prettier": "^3.5.1",
-    "prettier-plugin-astro": "^0.14.1"
+    "prettier-plugin-astro": "^0.14.1",
+    "tailwindcss": "3.4.17"
   }
 }
