--- a/package.json
+++ b/package.json
@@ -25,14 +25,12 @@
     "astro": "^5.4.2",
     "astro-compress": "^2.3.6",
     "daisyui": "4.12.23",
-    "flowbite": "^2.5.2",
     "framer-motion": "^12.4.10",
     "husky": "^9.1.7",
     "lucide-react": "^0.477.0",
     "react": "^18.3.1",
     "react-dom": "18.3.1",
-    "swiper": "^11.2.4",
-    "swup": "^4.8.1"
+    "swiper": "^11.2.4"
   },
   "devDependencies": {
     "@astrojs/ts-plugin": "^1.10.4",
