--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "lucide-react": "^0.477.0",
     "react": "^18.3.1",
     "react-dom": "18.3.1",
-    "swiper": "^11.2.4"
+    "swiper": "^11.2.4",
+    "swup": "4.8.1"
   },
   "devDependencies": {
     "@astrojs/ts-plugin": "^1.10.4",
