--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "lucide-react": "^0.477.0",
     "react": "^18.3.1",
     "react-dom": "18.3.1",
+    "react-hook-form": "^7.54.2",
+    "react-hot-toast": "^2.5.2",
     "swiper": "^11.2.4",
     "swup": "4.8.1"
   },
