--- a/package.json
+++ b/package.json
@@ -16,15 +16,15 @@
     "@astrojs/check": "^0.9.4",
     "@astrojs/react": "3.6.3",
     "@astrojs/sitemap": "^3.2.1",
-    "@astrojs/tailwind": "5.1.5",
     "@swup/astro": "^1.5.0",
+    "@tailwindcss/vite": "^4.1.3",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^19.0.4",
     "animate.css": "^4.1.1",
     "astro": "^5.4.2",
     "astro-compress": "^2.3.6",
-    "daisyui": "4.12.23",
+    "daisyui": "5.0.6",
     "framer-motion": "^12.4.10",
     "husky": "^9.1.7",
     "lucide-react": "^0.477.0",
@@ -39,6 +39,6 @@
     "@astrojs/ts-plugin": "^1.10.4",
     "prettier": "^3.5.1",
     "prettier-plugin-astro": "^0.14.1",
-    "tailwindcss": "3.4.17"
+    "tailwindcss": "4.1.3"
   }
 }
