--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-dom": "18.3.1",
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.5.2",
+    "react-icons": "^5.5.0",
     "swiper": "^11.2.4",
     "swup": "4.8.1"
   },
