--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@astrojs/check": "^0.9.4",
     "@astrojs/react": "3.6.3",
     "@astrojs/sitemap": "^3.2.1",
+    "@hookform/resolvers": "^5.0.1",
     "@swup/astro": "^1.5.0",
     "@tailwindcss/vite": "^4.1.3",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
@@ -34,7 +35,8 @@
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "swiper": "^11.2.4",
-    "swup": "4.8.1"
+    "swup": "4.8.1",
+    "zod": "^3.24.4"
   },
   "devDependencies": {
     "@astrojs/ts-plugin": "^1.10.4",
