--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "@astrojs/react": "3.6.3",
     "@astrojs/sitemap": "^3.2.1",
     "@hookform/resolvers": "^5.0.1",
-    "@libsql/client": "^0.15.10",
     "@swup/astro": "^1.5.0",
     "@tailwindcss/vite": "^4.1.3",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
@@ -29,9 +28,9 @@
     "animate.css": "^4.1.1",
     "astro": "^5.4.2",
     "astro-compress": "^2.3.6",
+    "axios": "^1.11.0",
     "daisyui": "5.0.6",
     "dotenv": "^17.2.1",
-    "drizzle-orm": "^0.44.4",
     "framer-motion": "^12.4.10",
     "husky": "^9.1.7",
     "lucide-react": "^0.477.0",
@@ -46,7 +45,6 @@
   "devDependencies": {
     "@astrojs/ts-plugin": "^1.10.4",
     "@types/node": "^24.2.1",
-    "drizzle-kit": "^0.31.4",
     "prettier": "^3.5.1",
     "prettier-plugin-astro": "^0.14.1",
     "tailwindcss": "4.1.3"
