--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@astrojs/check": "^0.9.4",
     "@astrojs/react": "3.6.3",
     "@astrojs/sitemap": "^3.2.1",
+    "@astrojs/vercel": "^8.2.7",
     "@hookform/resolvers": "^5.0.1",
     "@tailwindcss/vite": "^4.1.3",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
