--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "preview": "astro preview",
     "astro": "astro",
     "prettier": "prettier --write .",
-    "prepare": "husky"
+    "prepare": "husky",
+
+    "format": "pnpm exec biome format --write ./src",
+    "lint": "pnpm exec biome lint --write ./src",
+    "check_": "pnpm exec biome check --write ./src"
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
@@ -19,7 +23,6 @@
     "@astrojs/vercel": "^8.2.7",
     "@hookform/resolvers": "^5.0.1",
     "@tailwindcss/vite": "^4.1.3",
-    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^19.0.4",
     "animate.css": "^4.1.1",
@@ -40,9 +43,8 @@
   },
   "devDependencies": {
     "@astrojs/ts-plugin": "^1.10.4",
+    "@biomejs/biome": "2.2.3",
     "@types/node": "^24.2.1",
-    "prettier": "^3.5.1",
-    "prettier-plugin-astro": "^0.14.1",
     "tailwindcss": "4.1.3"
   }
 }
