--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
 
     "format": "pnpm exec biome format --write ./src",
     "lint": "pnpm exec biome lint --write ./src",
-    "check_": "pnpm exec biome check --write ./src"
+    "check:biome": "pnpm exec biome check --write ./src"
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
