--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "astro": "astro",
     "prettier": "prettier --write .",
     "prepare": "husky",
-
     "format": "pnpm exec biome format --write ./src",
     "lint": "pnpm exec biome lint --write ./src",
     "check:biome": "pnpm exec biome check --write ./src"
@@ -35,6 +34,7 @@
     "husky": "^9.1.7",
     "lucide-react": "^0.477.0",
     "react": "^18.3.1",
+    "react-country-flag": "^3.1.0",
     "react-dom": "18.3.1",
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.5.2",
